@@ -31,7 +31,7 @@ INSTALL_SUID	= $(INSTALL) -m 4755
 INSTALL_DATA	= $(INSTALL) -m 644
 
 INSTALL_OBJS_BIN   = $(PACKAGE)
-INSTALL_OBJS_MAN1  = *.1 *.1x
+INSTALL_OBJS_MAN1  = *.1
 INSTALL_OBJS_SHARE =
 INSTALL_OBJS_ETC   =
 
